um monte de rename, repath e código, organização tmb

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Governador Sustentável</title>
     <link rel="stylesheet" href="./styles/login.css">
+    <link rel="stylesheet" href="./styles/main.css">
     <script defer src="./js/login.js"></script>
 </head>
 <body>
@@ -20,17 +21,17 @@
                 <div>
                     <p>Escolha sua Dificuldade:</p>
                     <div id="seletorPersonagem">
-                        <input type="radio" name="difficulty" required id="sustentavel">
+                        <input class="difficulty-class" type="radio" name="difficulty" required id="sustentavel">
                         <label for="sustentavel">
-                            <img src="./assets/Sustentabilidade.webp" alt="sustentavel">
+                            <img src="./assets/characters/Sustentabilidade.webp" alt="sustentavel">
                         </label>
-                        <input type="radio" name="difficulty" required id="moderado">
+                        <input class="difficulty-class" type="radio" name="difficulty" required id="moderado">
                         <label for="moderado">
-                            <img src="./assets/Moderado.webp" alt="moderado">
+                            <img src="./assets/characters/Moderado.webp" alt="moderado">
                         </label>
-                        <input type="radio" name="difficulty" required id="visionario">
+                        <input class="difficulty-class" type="radio" name="difficulty" required id="visionario">
                         <label for="visionario">
-                            <img src="./assets/Visionário.webp" alt="visionario">
+                            <img src="./assets/characters/Visionário.webp" alt="visionario">
                         </label>                    
                     </div>
 
