--- a/game.html
+++ b/game.html
@@ -14,6 +14,25 @@
             <h1>Bem-vindo, <span id="playerName"></span>!</h1>
             <p>Dificuldade: <span id="difficulty"></span></p>
             <span id="gameStatus"></span>
+
+            <div class="opcoes">
+              <h2>Objetivos:</h2>
+              <div>
+                Saúde: <span id="saudeSpan">Ruim</span>
+                <button id="saude">Melhorar Saúde</button>
+                <span> R$ 4000 </span>
+              </div>
+              <div>
+                Educação: <span id="educacaoSpan">Ruim</span>
+                <button id="educacao">Melhorar Educacao</button>
+                <span> R$ 6000 </span>
+              </div>
+              <div>
+                Esgoto: <span id="esgotoSpan">Ruim</span>
+                <button id="esgoto">Melhorar Esgoto</button>
+                <span>R$ 2500 </span>
+              </div>
+            </div>
         </div>
 
         <div class="game-main">
